--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,10 @@
  /img/尺寸/图片id   # 可直接获取图片
 
  尺寸可选 ["mini","original","regular","small","thumb"]
+
 ```
+
+支持的图片大小最大为 `10mb`
 
 ![mini](/img/mini/99038048)
 
