--- a/simple_pixiv/templates/index.html
+++ b/simple_pixiv/templates/index.html
@@ -9,7 +9,9 @@
 
 ## 系统状态
 
-已缓存 {{ cache_count }} 张图片
+已缓存 {{ meta_cache }} 张图片元数据
+
+已缓存 {{ bookmark }} 张收藏图片
 
 ## 请求方式
 ```
@@ -18,6 +20,12 @@
 
 [测试](/json/99038048)
 
+
+```
+/random #可得到随机图
+```
+
+![随机图](/random)
 
 ```
  /img/尺寸/图片id   # 可直接获取图片
