--- a/simple_pixiv/templates/index.html
+++ b/simple_pixiv/templates/index.html
@@ -15,7 +15,7 @@
 
 ## 请求方式
 ```
- /json/图片id   # 可获取图片json详细信息
+ /json/图片id   # 可获取图片所有链接
 ```
 
 [测试](/json/99038048)
@@ -28,8 +28,9 @@
 ![随机图](/random)
 
 ```
+ /img/图片id   # 快速获取small大小图片
  /img/尺寸/图片id   # 可直接获取图片
-
+ /img/尺寸/图片id/页码   # 可获取指定页面
  尺寸可选 ["mini","original","regular","small","thumb"]
 
 ```
@@ -50,4 +51,4 @@
 </html>
 
 
-<!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js"></script><script src="https://fastly.jsdelivr.net/gh/mzdluo123/blog_imgs/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
+<!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="https://imgcdn.rainchan.win/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
